Intro Heading Letter Spacing Fixed
The subhead text styling on mobile still has too much letter spacing

--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -42,7 +42,7 @@ section{
               @media(max-width: $sm){
                 font-size: 30px;
                 line-height: 36px;
-                letter-spacing: 0.5px;
+                letter-spacing: 0px;
               }
             }
             p{
