--- a/style.css
+++ b/style.css
@@ -1063,7 +1063,7 @@ section.intro .container .col.content h2 {
 	section.intro .container .col.content h2 {
 		font-size: 30px;
 		line-height: 36px;
-		letter-spacing: 0.5px;
+		letter-spacing: 0px;
 	}
 }
 
